--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -9,4 +9,6 @@
     <button type="button" (click)="share()">
         Share
     </button>
+
+    <app-product-alerts [product]="product"></app-product-alerts>
 </div>
